# geng-utils

./: Cargo.toml  README.md  flake.nix
.github/workflows/: lint.yml  test.yml
examples/: keys.rs
src/: bounded.rs  conversions.rs  geometry.rs  gif.rs  key.rs  layout.rs  lib.rs  pixel.rs  task.rs  texture.rs  tiled.rs
src/interpolation/: bezier.rs  mod.rs  sod.rs  spline.rs
src/torus/: camera.rs  mod.rs  position.rs
