[package]
name = "geng-utils"
authors = ["Nertsal <nestralnertsal@gmail.com>"]
version = "0.1.0"
description = "A collection of utilities for Geng engine."
documentation = "https://docs.rs/geng-utils"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Nertsal/geng-utils"
keywords = ["game", "utility", "gamedev", "geng"]
categories = ["game-development"]

[dependencies]
geng = "0.15"
image = "0.24.6"
serde = { version = "1", features = ["derive"] }
